<resources>
    <!-- URIS -->
    <string name="uri_privacy">https://www.iubenda.com/privacy-policy/40822199/full-legal</string>
    <string name="uri_terms">https://www.designitalianshoes.com/it/termini-condizioni</string>

    <!-- locale strings -->
    <string name="app_name">DIS foot</string>

    <!-- locale BOARDING -->
    <string name="boarding_button_text">GET STARTED</string>
    <string name="boarding_text">DIS - Design Italian Shoes, is a winning solution for those who want to stand out and express their personality designing and wearing classic customised shoes for men - 100% Made in Italy.\n Scan your feet and customize your shoes on ​www.designitalianshoes.com​</string>
    <string name="boarding_title">YOUR TOUCH TO STAND OUT</string>
    <!-- locale INFO -->
    <string name="info_title">About</string>
    <string name="info_descr1">DIS - Design Italian Shoes, is a winning solution for those who want to stand out and express their personality designing and wearing classic customised shoes for men - 100% Made in Italy.</string>
    <string name="info_descr2">Scan your feet and customize your shoes on \n <b><u><a href="https://www.designitalianshoes.com/">https://www.designitalianshoes.com/</a></u></b></string>
    <!-- locale REGISTER -->
    <string name="register_privacy_text"><b><u><a href="https://www.iubenda.com/privacy-policy/40822199/full-legal">Privacy Policy</a></u></b></string>
    <string name="register_mail_hint">mario@gmail.com</string>
    <string name="register_name_hint">Mario Rossi</string>
    <!-- locale INSTRUCTIONS-->
    <string name="istr_title">To scan your feet you need:</string>
    <string name="istr_1"><b>A well-lit area</b> without glare</string>
    <string name="istr_2"><b>A standard sheet of white paper</b> (A4 or US letter) with no bends or wrinkles</string>
    <string name="istr_3"><b>A hard floor of a color that contrasts</b> with your feet and twith the white sheet of paper</string>
    <string name="istr_4"><b>Roll up your pants</b></string>
    <string name="istr_5"><b>Bare feet  no socks</b></string>
    <string name="istr_6"><b>Sit down throughout the whole scanning process.</b> Optionally ask someone to take photos</string>
    <!-- SEX PAPER NAME SELECTION -->
    <string name="papersexselection_title">New feet scan</string>
    <string name="papersexselection_paper">Select the size of the paper</string>
    <string name="papersexselection_paperA4"><c><b>210 x 297 mm\n8,27 x 11,69 inches</b></c></string>
    <string name="papersexselection_paperLetter"><c><b>215,9 x 279,4 mm\n8,5 x 11 inches</b></c></string>
    <string name="papersexselection_sex">Indicate your gender</string>
    <string name="papersexselection_sexMale">MALE</string>
    <string name="papersexselection_sexFemale">FEMALE</string>
    <string name="papersexselection_scanLabel">Give a name to your scan (optional)</string>
    <string name="papersexselection_optionalLabel">Optional</string>
    <string name="papersexselection_nextButton">Continue</string>
    <string name="papersexselection_DialogTitle">Give a name to your scan</string>
    <string name="papersexselection_DialogOk">Submit</string>
    <string name="papersexselection_DialogCancel">Cancel</string>
    <string name="fragmentSelectionDialogText">Give a name to Your Scan</string>

    <!-- FEET SCAN SEQUENCE FRAGMENT -->
    <string name="fragmentScanButtonBack">Back</string>
    <string name="fragmentScanButtonExit">Exit</string>

    <string name="fragmentScanCounter">Picture %d of %d</string>
    <string name="fragmentScanButton">Ok, let\'s take the picture %d</string>
    <string name="fragmentScanButtonMain">Start</string>

    <!-- RIGHT-->
    <string name="fragmentScanRightMainTitle">Start with the <font color='#7ED321'>right</font> foot</string>
    <string name="fragmentScanRightMainSubtitle">You are going to take <b>3 photos</b> of the right foot.</string>
    <string name="fragmentScanRightMainText"><b>Please sit down and place your foot on the sheet as shown in the picture and follow the instructions on the screen.</b>\n\nYou are going to take <b>3 photos</b> of the right foot.\n\nRemember to stand comfortably, because you <b>MUST NOT MOVE</b> the right foot from photos 1 until you take photo 3.</string>

    <string name="fragmentScan1RightInnerTitle"><font color='#7ED321'>Right</font> Inner Side</string>
    <string name="fragmentScan1RightInnerText">Take a photo like the one you see above by following these tips.\n\nAim the camera at the <b>inner side</b> of your right foot.\n\nMake sure that the <b>four corners</b> of the sheet of paper​<b>are visible.</b>\n\nMake sure that the​<b>heel is included in the image.</b></string>

    <string name="fragmentScan2RightTopTitle"><font color='#7ED321'>Right</font> Top Side</string>
    <string name="fragmentScan2RightTopText">Take a photo like the one you see above by following these tips.\n\nRotate your phone in landscape mode and <b>tilt it</b> slightly <b>outwards</b> until the red and grey outlines merge and become green.\n\nMake sure that the​<b>four corners</b> of the sheet of paper <b>are visible.</b></string>

    <string name="fragmentScan3RightOuterTitle"><font color='#7ED321'>Right</font> Outer Side</string>
    <string name="fragmentScan3RightOuterText">Take a photo like the one you see above by following these tips.\n\nAim the camera at the <b>outer side</b> of your right foot.\n\nMake sure that the <b>four corners​</b> of the sheet of paper <b>are visible.</b>\n\nMake sure that the <b>heel is included in the image.</b></string>

    <!-- LEFT-->
    <string name="fragmentScanLeftMainTitle">Now  with the <font color='#F8E71C'>left</font> foot</string>
    <string name="fragmentScanLeftMainSubtitle">You are going to take <b>3 photos</b> of the left foot.</string>
    <string name="fragmentScanLefttMainText">Please, stay seated and place your foot on the sheet as shown in the picture and follow the instructions on the screen.\n\nYou are going to take <b>3 photos</b> of the left foot.\n\nRemember to stand comfortably, because you <b>MUST NOT MOVE</b> the left foot from photos 1 until you take photo 3.</string>

    <string name="fragmentScan4LeftInnerTitle"><font color='#F8E71C'>Left</font> Inner Side</string>
    <string name="fragmentScan4LefttInnerText">Take a photo like the one you see above by following these tips.\n\nAim the camera at the <b>inner side</b> of your left foot.\n\nMake sure that the <b>four corners​</b> of the sheet of paper​<b>are visible.</b>\n\nMake sure that the​<b>heel is included in the image.</b></string>

    <string name="fragmentScan5LeftTopTitle"><font color='#F8E71C'>Left</font> Top Side</string>
    <string name="fragmentScan5LeftTopText">Take a photo like the one you see above by following these tips.\n\nRotate your phone in landscape mode and <b>tilt it</b> slightly <b>outwards</b> until the red and grey outlines merge and become green.\n\nMake sure that the <b>four corners</b> of the sheet of paper <b>are visible.</b></string>

    <string name="fragmentScan6LeftOuterTitle"><font color='#F8E71C'>Left</font> Outer Side</string>
    <string name="fragmentScan6LeftOuterText">Take a photo like the one you see above by following these tips.\n\nAim the camera at the <b>outer side</b> of your left foot.\n\nMake sure that the <b>four corners​</b> of the sheet of paper <b>are visible.</b>\n\nMake sure that the <b>heel is included in the image.</b></string>


    <!-- FEET SCAN RESULT FRAGMENT -->
    <string name="resultBtn">Go To Your Model Card</string>
    <string name="resultAlertTitle">Error</string>
    <string name="resultAlertMessage">The service is temporarily unavailable. please try again in a few minutes</string>

    <string name="resultProcessingTitle">Processing data</string>
    <string name="resultProcessingSubtitle">Take less than 10 seconds. Please wait...</string>

    <string name="resultFinishedTitle">Final result</string>
    <string name="resultFinishedSubtitle">Your number for the selected model is</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- OTHER SCAN FRAGMENT -->
    <string name="otherMeasureButtonDelete">Delete</string>

</resources>
