<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scanning.FragmentPaperSexNameSelection">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fragmentSelectionBlurredBackGroundImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_scanning_blurred_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragmentSelectionBlurredBackGroundImageViewOpacity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.8"
            android:background="@color/Black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="27dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/papersexselection_title"
            android:textColor="@color/White"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="27dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/papersexselection_paper"
            android:textColor="@color/White"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="27dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20">

            <LinearLayout
                android:id="@+id/fragmentSelectionA4View"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icoPaperA4"
                    style="@style/styleDeselected"
                    android:layout_width="47dp"
                    android:layout_height="64dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_selection_paper_a4" />

                <TextView
                    android:id="@+id/textPaperA4"
                    style="@style/styleDeselected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="27dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:text="@string/papersexselection_paperA4"
                    android:textColor="@color/White"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragmentSelectionLetterView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icoPaperLetter"
                    style="@style/styleDeselected"
                    android:layout_width="47dp"
                    android:layout_height="64dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_selection_paper_letter" />

                <TextView
                    android:id="@+id/textPaperLetter"
                    style="@style/styleDeselected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="27dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:text="@string/papersexselection_paperLetter"
                    android:textColor="@color/White"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="27dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/papersexselection_sex"
            android:textColor="@color/White"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="27dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25">

            <LinearLayout
                android:id="@+id/fragmentSelectionMaleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icoSexMale"
                    style="@style/styleDeselected"
                    android:layout_width="47dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_selection_male" />

                <TextView
                    android:id="@+id/textSexMale"
                    style="@style/styleDeselected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="27dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:text="@string/papersexselection_sexMale"
                    android:textColor="@color/White"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragmentSelectionFemaleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icoSexFemale"
                    style="@style/styleDeselected"
                    android:layout_width="47dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    android:src="@drawable/ic_selection_female" />

                <TextView
                    android:id="@+id/textSexFemale"
                    style="@style/styleDeselected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="27dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:text="@string/papersexselection_sexFemale"
                    android:textColor="@color/White"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="27dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/papersexselection_scanLabel"
            android:textColor="@color/White"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <Button
            android:id="@+id/fragmentSelectionBtnNext"
            style="@style/style_dis_button_white"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="10dp"
            android:text="@string/papersexselection_nextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragmentSelectionScanNameInput"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/dis_scan_name_inputbox"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:textColor="@color/White"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/fragmentSelectionBtnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>